# AudioManager

./: .gitattributes  .gitignore  README.md  build.gradle  config.gradle  local.properties  settings.gradle  traces.txt  trances.tx
app/: build.gradle
app/src/androidTest/java/com/devyk/audioplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/devyk/audioplayer/: App.kt  MainActivity.kt  TimeConverUtils.kt
app/src/main/java/com/devyk/audioplayer/widgets/: AudioLineView.kt  AudioWaveView.kt  CircleImageView.java  WaveView.java
app/src/main/res/anim/: rotate.xml
app/src/main/res/drawable/: button_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  integers.xml  styles.xml
app/src/test/java/com/devyk/audioplayer/: ExampleUnitTest.kt
audio_library/: build.gradle
audio_library/src/androidTest/java/com/devyk/audio_library/: ExampleInstrumentedTest.java
audio_library/src/main/: AndroidManifest.xml
audio_library/src/main/cpp/: CMakeLists.txt  native_audio.cpp
audio_library/src/main/cpp/callback/: Native2JavaCallback.cpp  Native2JavaCallback.h
audio_library/src/main/cpp/channel/: AudioPlayer.cpp  AudioPlayer.h  BaseAudioChannel.cpp  BaseAudioChannel.h
audio_library/src/main/cpp/decode/: AudioDecodec.cpp  AudioDecodec.h  BaseDecodec.cpp  BaseDecodec.h
audio_library/src/main/cpp/encode/: PCM_2_MP3_Decode.cpp  PCM_2_MP3_Decode.h
audio_library/src/main/cpp/lame/libmp3lame/: VbrTag.c  bitstream.c  encoder.c  fft.c  id3tag.c  lame.c  newmdct.c  psymodel.c  quantize.c  util.h
audio_library/src/main/cpp/manager/: AudioControlManager.cpp  AudioControlManager.h  Status.cpp  Status.h
audio_library/src/main/cpp/soundtouch/source/: SoundTouch.cpp
audio_library/src/main/cpp/util/: NativeQueue.h
audio_library/src/main/cpp/xlogger/include/: android_xlog.h
audio_library/src/main/java/com/devyk/audio_library/: NativeMethods.kt  YKAudioManager.kt
audio_library/src/main/java/com/devyk/audio_library/callback/: ICutCallback.kt  IPlayerCallback.kt
audio_library/src/main/java/com/devyk/audio_library/manager/: ChannelConfig.kt  NativeManager.kt
audio_library/src/main/java/com/tencent/mars/xlog/: Xlog.java
audio_library/src/main/res/values/: strings.xml
audio_library/src/test/java/com/devyk/audio_library/: ExampleUnitTest.java
ffmpeg_lib/static/arm64-v8a/include/libavformat/: avformat.h
gradle/wrapper/: gradle-wrapper.properties
shell/: android_addr2line_64.sh  build_ffmpeg_all.sh  config.sh  xlog2txt.sh
xlog/: decode_mars_nocrypt_log_file.py
